2009-02-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10428: htmlArea RTE: Remove configuration variables related to Mozilla clipboard access

2009-02-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9728: Improve performance of Prototype, Scriptaculous, ExtJS and other contributed scripts

2009-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9805: RTE and DAM element browsers show wrong colours
	* Follow-up for feature #10339: htmlArea RTE: Move editing mode change to plugin
	* Follow-up for feature #10182: htmlArea RTE: Add support for editing lang attribute
	* Added feature #10416: htmlArea RTE: Add configuration options for the acronym feature
	* Further follow-up for feature #10182: htmlArea RTE: Add support for editing lang attribute

2009-02-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8446: Follow up, renamed "OL" to Object List in Template Object Browser

2009-02-10  Ingo Renner  <ingo@typo3.org>

	* Fixed a bug with the module menu forgeting it's open/closed states, caused by #9136
	* Fixed look of logout button; width was fixed and thus didn't expand to fit wider labels coming from translation (credits Steffen Kamper)

2009-02-10  Michael Stucki  <michael@typo3.org>

	* Fixed bug #10364: Jumpurl feature allows to access arbitrary files on a server (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10298: Various XSS issues in the BE user admin module (thanks to Jelmer de Hen and Dmitry Dulepov)

2009-02-08  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9861: Second page of results in list-module with ordering flaw (credits Christian Kuhn)

2009-02-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10373: Remove doubled check in tceforms

2009-02-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10368: Wrong clear.gif path in dyntabs

2009-02-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10375: 2 little JS-Errors that bug IE

2009-02-06  Ingo Renner  <ingo@typo3.org>
